fix(form) Alignement du formulaire, ajout de bootstrap et debut du responsive

--- a/FormStyle.css
+++ b/FormStyle.css
@@ -15,39 +15,89 @@ header {
 
 h1 {
   padding: 20px;
-  font-size: 150%;
+  font-size: 200%;
+  font-weight: 400;
 }
 
 p {
-  padding: 10px;
+  padding: 5px;
+  margin: inherit;
+  clear: left;
 }
 
 label {
-  padding: 5px;
+  width: 25%;
+  text-align: right;
+  padding: 2px;
+
+}
+
+fieldset.identite label{
+  margin-right: 10px;
+  margin-left: 20px;
+  float: left;
+}
+
+fieldset.identite{
+  float: none;
+}
+
+fieldset.activite{
+  clear: left;
+  float: none;
 }
 
 fieldset {
   width : 50%;
   margin-left: auto;
   margin-right: auto;
+  border-width: 2px;
+  border-style: groove;
+  border-color: threedface;
+  padding-bottom: 10px;
 }
 
 legend {
-  font-size: 130%;
+  width: auto;
+  font-size: 150%;
   padding: 5px;
+  border-bottom: 0px;
 }
 
-input {
-  border-radius: 5px
+input, textarea{
+  width: 50%;
+  resize: none;
+  border-radius: 5px;
+  float: left;
+  border-style: inset;
+  border-color: #eee;
+  border-width: 2px;
+}
+
+input.age{
+  width: 20%
 }
 
 input.bouton {
+  clear: left;
   margin: 10px;
   padding: 10px;
+  width : 80px;
+  float: none;
+
 }
 
 input[type=checkbox] {
   display:none;
+}
+
+select.pays {
+  float: left;
+  text-align: left;
+  width: auto;
+  border-radius: 10px;
+  padding : 2px;
+  padding-left: 5px;
 }
 
 #doctor + label{
